Bug 452856 - Can't paste clipboard image.
Summary: Can't paste clipboard image.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
: 452897 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-04-22 12:55 UTC by Eranthis stellata Maxim
Modified: 2022-04-28 15:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eranthis stellata Maxim 2022-04-22 12:55:27 UTC
SUMMARY
Can't paste clipboard image.

STEPS TO REPRODUCE
1. Use the Printscreen shortcut key to take screenshots in the Windows system.
2. Use the shortcut key Ctrl+V to paste into the krita canvas.
(Also, selecting Create from Clipboard in Create New Document does nothing.)

OBSERVED RESULT
No effect.

EXPECTED RESULT
Pastes clipboard images normally as in 5.0.5.


SOFTWARE/OS VERSIONS
Krita

 Version: 5.1.0-prealpha (git f665ca6)
 Installation type: installer / portable package
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, zh_CN, zh, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19042
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (NVIDIA GeForce GTX 970 Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 
  supportsBufferMapping: true 
  supportsBufferInvalidation: false 
  Extensions: 
     "GL_OES_texture_half_float_linear" 
     "GL_CHROMIUM_copy_texture" 
     "GL_ANGLE_pack_reverse_row_order" 
     "GL_EXT_debug_marker" 
     "GL_EXT_draw_buffers" 
     "GL_ANGLE_framebuffer_blit" 
     "GL_EXT_discard_framebuffer" 
     "GL_EXT_texture_format_BGRA8888" 
     "GL_ANGLE_translated_shader_source" 
     "GL_EXT_blend_minmax" 
     "GL_NV_EGL_stream_consumer_external" 
     "GL_EXT_texture_compression_s3tc_srgb" 
     "GL_CHROMIUM_bind_uniform_location" 
     "GL_OES_texture_float_linear" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_OES_packed_depth_stencil" 
     "GL_OES_compressed_ETC1_RGB8_texture" 
     "GL_OES_vertex_array_object" 
     "GL_EXT_color_buffer_half_float" 
     "GL_ANGLE_request_extension" 
     "GL_EXT_read_format_bgra" 
     "GL_EXT_sRGB" 
     "GL_NV_pack_subimage" 
     "GL_EXT_occlusion_query_boolean" 
     "GL_EXT_robustness" 
     "GL_ANGLE_client_arrays" 
     "GL_EXT_texture_storage" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_OES_texture_half_float" 
     "GL_OES_texture_npot" 
     "GL_OES_rgb8_rgba8" 
     "GL_OES_EGL_image_external" 
     "GL_ANGLE_texture_usage" 
     "" 
     "GL_OES_surfaceless_context" 
     "GL_CHROMIUM_copy_compressed_texture" 
     "GL_ANGLE_multiview" 
     "GL_ANGLE_program_cache_control" 
     "GL_EXT_color_buffer_float" 
     "GL_KHR_debug" 
     "GL_OES_EGL_image" 
     "GL_OES_texture_float" 
     "GL_EXT_disjoint_timer_query" 
     "GL_EXT_map_buffer_range" 
     "GL_OES_element_index_uint" 
     "GL_CHROMIUM_sync_query" 
     "GL_NV_pixel_buffer_object" 
     "GL_EXT_texture_rg" 
     "GL_OES_get_program_binary" 
     "GL_ANGLE_depth_texture" 
     "GL_CHROMIUM_color_buffer_float_rgba" 
     "GL_EXT_texture_norm16" 
     "GL_NV_fence" 
     "GL_OES_depth32" 
     "GL_OES_EGL_image_external_essl3" 
     "GL_OES_mapbuffer" 
     "GL_ANGLE_lossy_etc_decode" 
     "GL_ANGLE_texture_compression_dxt3" 
     "GL_ANGLE_framebuffer_multisample" 
     "GL_CHROMIUM_color_buffer_float_rgb" 
     "GL_CHROMIUM_bind_generates_resource" 
     "GL_OES_standard_derivatives" 
     "GL_EXT_shader_texture_lod" 
     "GL_ANGLE_robust_client_memory" 
     "GL_EXT_frag_depth" 
     "GL_ANGLE_texture_compression_dxt5" 
     "GL_ANGLE_instanced_arrays" 
     "GL_EXT_unpack_subimage" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 32693 Mb
  Number of Cores: 16
  Swap Location: C:/Users/xi/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/xi/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 2560x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 59
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60


---------------------
================================================================================
SESSION: 22 Apr 2022 20:43:56 +0800. Executing D:\P F\krita-nightly-x64-5.1.0-prealpha-f665ca6c0a\bin\krita.exe

Krita Version: 5.1.0-prealpha (git f665ca6), Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 8460
-- -- -- -- -- -- -- --
22 Apr 2022 20:43:56 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
22 Apr 2022 20:43:57 +0800: Creating database from scratch (database didn't exist, new schema version: 0.0.16).
22 Apr 2022 20:44:10 +0800: Non-store package - creating updater
22 Apr 2022 20:44:22 +0800: Created image "Unnamed", 2480 * 3508 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2
22 Apr 2022 20:44:36 +0800: CLOSING SESSION
================================================================================
SESSION: 22 Apr 2022 20:44:39 +0800. Executing D:\P F\krita-nightly-x64-5.1.0-prealpha-f665ca6c0a\bin\krita.exe

Krita Version: 5.1.0-prealpha (git f665ca6), Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 3080
-- -- -- -- -- -- -- --
22 Apr 2022 20:44:39 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
22 Apr 2022 20:44:40 +0800: Database is up to date. Version: 0.0.16, created by Krita 5.1.0-prealpha, at 周五 4月 22 20:43:57 2022
22 Apr 2022 20:44:41 +0800: Non-store package - creating updater
22 Apr 2022 20:44:47 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Apr 2022 20:44:47 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Apr 2022 20:44:47 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Apr 2022 20:44:48 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Apr 2022 20:44:48 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1
22 Apr 2022 20:44:48 +0800: Created image "Unnamed", 2560 * 2520 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 1

---------------------
Comment 1 amyspark 2022-04-24 00:51:52 UTC
Cannot reproduce on the given commit. Do you have any particular preference set for the image source and the colour profile in Preferences / General?
Comment 2 Eranthis stellata Maxim 2022-04-24 01:54:38 UTC
(In reply to amyspark from comment #1)
> Cannot reproduce on the given commit. Do you have any particular preference
> set for the image source and the colour profile in Preferences / General?

I didn't change the default configuration.
Comment 3 Bug Janitor Service 2022-04-24 04:35:05 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 amyspark 2022-04-24 12:54:26 UTC
Ok, confirming now. It's strictly PrintScreen that fails, and it only does so if the source is not set to PASTE_FORMAT_ASK in the Preferences.
Comment 5 amyspark 2022-04-24 13:17:00 UTC
*** Bug 452897 has been marked as a duplicate of this bug. ***
Comment 6 amyspark 2022-04-28 15:27:19 UTC
Git commit ec18fd9d5fdd5e233e7dbfd54966c25cc33db3ea by L. E. Segovia.
Committed on 28/04/2022 at 14:06.
Pushed by lsegovia into branch 'master'.

Auto-select the source if PASTE_FORMAT_ASK and a single format is available

M  +1    -1    libs/ui/kis_clipboard.cc

https://invent.kde.org/graphics/krita/commit/ec18fd9d5fdd5e233e7dbfd54966c25cc33db3ea