Auto-select the source if PASTE_FORMAT_ASK and a single format is available

BUG: 452856